working on carousel for projects

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class='nav-right'>
         <a href="#about"><h4>About</h4></a>
-        <a href=""><h4>Projects</h4></a>
+        <a href="#projects"><h4>Projects</h4></a>
         <a href=""><h4>Contact</h4></a>
       </div>
     </header>
@@ -49,8 +49,22 @@
       </div>
     </section>
     <section class="skills">
+    </section>
+    <section class='projects'>
+      <div class="carousel">
+        <a class="prev">&#10094;</a>
+        <div class='slide first'></div>
+        <div class="slide second"></div>
+        <div class="slide third"></div>
+        <a class="next">&#10095;</a>
+        <div class='dots'>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
       </div>
     </section>
+    <!-- <section class="contact"></section> -->
   </div>
   <script src="./index.js"></script>
 </body>
