added project photos and working onclick actions in

--- a/index.html
+++ b/index.html
@@ -53,15 +53,24 @@
     <section class='projects'>
       <div class="carousel">
         <a class="prev">&#10094;</a>
-        <div class='slide first'></div>
-        <div class="slide second"></div>
-        <div class="slide third"></div>
-        <a class="next">&#10095;</a>
-        <div class='dots'>
-          <span class="dot"></span>
-          <span class="dot"></span>
-          <span class="dot"></span>
+        <div class='slide first'>
+          <img src="./images/loginpage.png" alt="C0D3R">
+          <p class="hidden">Coder</p>
         </div>
+        <div class="slide second">
+          <img src="./images/themound.png" alt="TheMound">
+          <p class="hidden">The Mound</p>
+        </div>
+        <div class="slide third">
+          <img src="./images/login.png" alt="Better Day">
+          <p class="hidden">Better Day</p>
+        </div>
+        <a class="next">&#10095;</a>
+        <!-- <div class='dots'>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div> -->
       </div>
     </section>
     <!-- <section class="contact"></section> -->
