--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <section class="skills">
     </section>
     <section class='projects'>
+      <a name='projects'></a>
       <div class="carousel">
         <a class="prev">&#10094;</a>
         <div class='slide first'>
