added resume pdf

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
   <script src="./index.js"></script>
   <footer>
-      <div><a href="https://docs.google.com/document/d/1kc7iY0MdQwAcHp5HLYRXmityLYPV38Nv4AbOgBG0NVc/edit?usp=sharing" target='_blank'>Resume</a></div>
+      <div><a href='./images/JoshBrown.pdf' target='_blank'>Resume</a></div>
       <div><a href="https://github.com/JoshRBrown" target='_blank'>GitHub</a></div>
       <div><a href="https://www.linkedin.com/in/joshrbrown/" target='_blank'>LinkedIn</a></div>
   </footer>
