updated font colors

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     </section>
     <section class="contact">
       <div class='contact-devices'> 
-        <a name="contact"></a>
         <h4>
           Contact Info
         </h4>
+        <p>Click icons below</p>
         <div class='devices'>
           <div class='phone'>
             <i class="fa fa-phone"></i>
@@ -98,6 +98,7 @@
         </div>
       </div>
       <div class='contact-right'></div>
+      <a name="contact"></a>
     </section>
   </div>
   <script src="./index.js"></script>
