--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
       </div>
     </section>
     <section class="skills">
+      <h1>Skills</h1>
     </section>
+    <a name='projects'></a>
     <section class='projects'>
-      <a name='projects'></a>
       <div class="carousel">
+        <h1>Projects</h1>
+        <p>Click on a project to see more</p>
         <a class="prev">&#10094;</a>
         <div class='slide first'>
           <img src="./images/loginpage.png" alt="C0D3R">
