--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>
-      <div class='contact-right'></div>
+      <!-- <div class='contact-right'></div> -->
       <a name="contact"></a>
     </section>
   </div>
